2005-01-26  Mengjie Yu  <meng-jie.yu@sun.com>

	* htmlengine.c: (html_engine_parse):
	fix #70083 We need to set engine is parsing before all
	content are destroied.

2005-01-25  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: added test and test-verbose rules

	* test-suite.c (test_cursor_left_right_on_items_boundaries): added
	new test

	* htmltextslave.c: fixed cursor movement, implemented new
	functions for cursor movement, removed old code
	(draw_text): draw selected glyph only if selection inersection
	width is greater than zero
	(html_text_slave_cursor_left_one): fixed movement on items
	boundaries for ltr

	* htmltext.c: updated direction handling, fixed cursor movement,
	fixed cursor base, implemented new functions for cursor movement

	* htmlobject.c: make cursor_[forward/backward] virtual, added new
	virtual functions cursor_[left/right], added new virtual functions
	to get left/right object edge offsets

	* htmlgdkpainter.c: fixed spell errors drawing

	* htmlengine-edit-movement.c: use html_cursor_[right/left]
	functions

	* htmlcursor.c: added html_cursor_[left/right] for ltr/rtl cursor
	movement

2005-01-24  Mengjie Yu  <meng-jie.yu@sun.com>

	Fixes #70134

	* gtkhtml.c: (command):
	make Home/End navigation work properly when Caret Mode is enabled


2005-01-22  Radek Doulik  <rodo@ximian.com>

	* test-suite.c: added test for outer quotes inside div block

	* added test-suite.c from RTL branch

	* htmlengine.c (html_engine_ensure_editable): just make sure head
	of top level clue is non null. head now can be cluev as well when
	for example <div> is at the beggining of html document
	(push_clue_style): do not push list stack so that we don't lose
	quotes and lists in the inner block. Fixes broken quotes in
	replies in evolution.

	* htmltextslave.c (html_text_slave_init): make sure glyph_items is
	initalized to NULL

2005-01-21  Radek Doulik  <rodo@ximian.com>

	* htmlobject.c (html_object_real_get_direction): do not traverse