@@ -1,3 +1,10 @@
+2005-01-26  Radek Doulik  <rodo@ximian.com>
+
+	* htmltextslave.c (hts_fit_line): set tab widths
+
+	* htmltext.c (html_text_get_pango_info): shape tabs similar as
+	pango layout
+
 2005-01-26  Mengjie Yu  <meng-jie.yu@sun.com>
 
 	* htmlengine.c: (html_engine_parse):
